<resources>

    <string name="app_name">Pokedex</string>
    <string name="nome">Nome</string>
    <string name="tipo1">Tipo 1°</string>
    <string name="tipo2">Tipo 2°</string>
    <string name="dexNum">Numero da Dex</string>
    <string name="dtcaptura">Data de Captura</string>
    <string name="salvar">Salvar</string>
    <string name="sair">Sair</string>
    <string name="voltar">Voltar</string>
    <string name="apagar">Apagar</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="android_studio">pessoaNome</string>
    <string name="email">joselito_nbrincar@mtv.com</string>

    <string name="preferencias">Preferências</string>
    <string name="perfil">Perfil</string>

    <string name="ordem_default">Num Dex</string>
    <string name="ordem_titulo">Ordem dos Pokemon</string>
    <string name="ordem_key">ORDEM_DA_LISTA</string>
    <string name="ordem_sumario">Define a ordem como os Pokemon aparecerão na lista principal</string>

    <string name="filtro_titulo">Filtro de Pokemons</string>
    <string name="filtro_key">FILTRO_HABILITADO</string>
    <string name="dados_do_usuario">Dados do Usuário</string>

    <string-array name="ordem_itens">
        <item>Num Dex</item>
        <item>Nome</item>
        <item>Data de captura</item>
    </string-array>

    <string name="layout_default">Lista</string>
    <string name="layout_titulo">Tipo de exibição</string>
    <string name="layout_key">TIPO_LAYOUT</string>
    <string name="layout_sumario">Define um tipo de layout a ser exibido </string>

    <string-array name="layouts_ordem">
        <item>Card</item>
        <item>Lista</item>
    </string-array>
</resources>
